2008-06-11  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs
	(ISourceMethod): Renamed to `IMethodDef'.
	(SourceMethodBuilder): New public class.
	(MonoSymbolWriter.OpenMethod): Added `int ns_id' argument and
	return a `SourceMethodBuilder'.

2008-06-10  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs
	(OffsetTable.MinorVersion): Bump to 6.  There were no changes to
	the file format, but we were generating incorrect source file
	indices in the line number table due to a bug, which made
	backtraces report an incorrect source file.

2008-06-10  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs
	(MonoSymbolWriter.MarkSequencePoint): Added overloaded version
	taking a `SourceFileEntry' instead of a file index.

2008-06-10  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs
	(MonoSymbolWriter.CloseMethod): Quick-fix; still a lot of broken
	code out there.

2008-06-05  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs
	(MethodEntry.Flags): New public enum.
	(MethodEntry.MethodFlags): New public fields.
	(MethodEntry.LocalNamesAmbiguous): Removed; this is now part of
	the `MethodFlags'.

	* MonoSymbolWriter.cs
	(MonoSymbolWriter.SetCompilerGenerated): New public method.

2008-06-02  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs
	(ICompileUnit): New public interface.
	(MonoSymbolWriter.Sources): Removed.
	(MonoSymbolWriter.OpenMethod): Take an `ICompileUnit', removed
	`startRow', `startColumn', `endRow' and `endColumn'.
	(MonoSymbolWriter.DefineCompilationUnit): New public method.
	(MonoSymbolWriter.DefineNamespace): Operate on `ICompileUnit'.

	* MonoSymbolFile.cs
	(MonoSymbolFile.CompileUnit): New public properties.

	* MonoSymbolTable.cs
	(OffsetTable): Replace `Version' by `MajorVersion' and
	`MinorVersion'.  Add `CompileUnitCount', `CompileUnitTableOffset'
	and `CompileUnitTableSize'.
	(CompileUnitEntry): New public method.
	(LineNumberTable): Removed `StartFile' and `StartRow'.